# canboat

./: .clang-format  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GPL  LICENSE  Makefile  README  README.md  cross-compile.sh  release-please-config.json
.github/: pull_request_template.md
actisense-serial/: Makefile  actisense-serial.c  actisense.h
airmar/: airmar.php
analyzer/: .npmignore  Makefile  analyzer-explain.c  analyzer.c  analyzer.h  canboat-csv.xsl  canboat2json.xslt  company.h  fieldtype-data.h  fieldtype.c  fieldtype.h  fixup-html.sh  fixup-version.py  fixup-version.sh  lookup.c  lookup.h  new  nonstdbool.h  package.json  pgn-data.h  pgn-j1939-data.h  pgn-j1939.h  pgn-test-json-nv-debug.out  pgn.c  pgn.h  pgns-ik.json  pgns-ik.xml  pgns-ngt.json  pgns-ngt.xml  pgns-v2.json  pgns-v2.xml  pgns-v2.xsd  pgns.json  pgns.xml  pgns2json.xslt  physicalquantity-data.h  print.c  test  test_pgn  test_pgn.c  (+3 more)
analyzer2csv/: analyzer2csv
candump2analyzer/: Makefile  candump2analyzer.c  candumpSample1.txt  sample.txt  sample3_GPSMAP4008_NMEA2000_6_21_2015_16_7_59.csv
common/: b64.c  common.c  common.h  dup.h  license.h  parse.c  parse.h  pow.h  serial.h  utf.c  utf.h  version.h
config/: n2kd  (+1 more)
keel/: .gitignore  Cargo.toml  DESIGN.md  FINDINGS.md  QUIRKS.md  keel  keel.cmd  pyproject.toml
keel/bootstrap/: README.md  pyproject.toml
keel/bootstrap/src/keel_bootstrap/: __init__.py  cformat.py  cheader.py  cli.py  convert.py  derive.py  emit_xml.py  model.py  yamlio.py
keel/src/: bits.rs  cformat.rs  check.rs  decode.rs  derive.rs  edit.rs  emit_c.rs  emit_text.rs  emit_xml.rs  generate.rs  harvest.rs  main.rs  model.rs  rules.rs  samples.rs  yamlio.rs
keel/src/keel/: cli.py  convert.py  model.py  xmlread.py  yamlio.py
keel/web/: index.html
(+1234 files in other folders)
